---------------------------------------------------------------------

- Added a -d command line option to set the working directory (thanks to RPGHacker for the suggestion and feedback)
- Resources added to level/gamemode/overworld * can now be skipped on specific levels by prefiing them with a "-" in the list file.  (Thanks to Segment1Zone2 for prompting me to take another look at this).

Version 2.1 (beta 2):
(fernap:)
- Extra bytes can now be given in 2- and 3-byte chunks (with endianness handled) by enclosing in ()s and []s, respectively
- No longer generates assembly errors when parent folders (now resources too) contain a "!" character (reported by ninj)
- Added support for a variable number of extra bytes with the ";>bytes any" command
- Migrate to .NET 8
- Fixed an old crash from any asar messages that contained a bogus C# format string (originally reported by Anas)

Version 2.1 (beta 1):
(fernap:)
- Added some command line options: disable "press any key to continue"; early setting of quiet mode; print version number ... see readme for details
- Level NMI code now runs in game modes 05-07 also so as to be active on the title screen, with an option to disable new behavior (suggested by MarioFanGamer)
- Fixed a crash when patching causes asar to expand the ROM (reported by Anas)
- Now creates any necessary work folders that don't already exist at program startup (suggested by Underrout)
- Added a 'deprecations' command to the list file to either show or hide asar's deprecation warnings (hide by default)
- Added fullsa1rom support
- Now throws an error when resource files contain no valid labels (suggested by RPGHacker)
- Updated to asar 1.91

Version 2.0:
(fernap:)
- Misc shared routine updates and fixes
- Fixed an error writing to the .extmod file (reported by Underrout)
- Fixed a crash for gamemode NMI resources
- Fixed a hang when updating from 1.x to 2.0 on SA-1 roms (reported by Makhnoslides)